argo/components/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argo-workflow

spec:
  entryPoints:
    - websecure
  tls:
    secretName: argo-workflow-tls
  routes:
    - kind: Rule
      match: Host(`workflow.cd.trap.jp`)
      middlewares:
        - name: auth-trap-jp-hard
          namespace: auth
      services:
        - kind: Service
          namespace: argo
          name: argo-argo-workflows-server
          port: 2746
          scheme: http
          weight: 1
